== Release notes

Every release contains many small fixes.

=== 1.11.0.0
* Application: Declare Resources with Bundles, not with Strings

=== 1.10.0.0
* Split Application/Model/Api
* More work/doc on routing

=== 1.9.0.0
* HtmlFrontend: FlexBox Layout
* HtmlFrontend: Title in Browser
* Frontends: Simple application icon
* Pages can provide route for bookmarks
* Vaadin Frontend: complete migration to Vaadin 8

=== 1.8.0.0
* Model: self references of classes are only allowed through View or Lists
* SwingFrontend: fix special LookAndFeel

=== 1.7.0.0
* Frontend: support for html5 inputs on small devices
* Frontend: better Date/Time/DateTime support
* In Memory Database nearly complete

=== 1.6.0.0
* Support for H2 Database - much faster than derby
* Update maria db connector
* In Memory Database (as extension project)

=== 1.5.0.0
* Redesign / refactoring of queries (repository)
* Extendable search tables

=== 1.4.0.0
* Repository: removed active 'push' of changes on lazy lists

=== 1.3.0.0
* SqlRepository: Oracle Dialect
* Security: removed Grant concept, redesigned authorization
* Renamed Persistence class and package to repository

=== 1.2.0.0
* Frontend: replace special Size class with a simple integer (API change)
* Persistence: Optimistic locking
* Persistence: Technical fields (create/edit by/at)

=== 1.1.0.0
* Configuration: specify all configuration properties in a config file
* MjServlet: separate it in a special project. Manage to get context parameters as configuration
* Lanterna: also moved in separate project. Still not finished.

=== 1.0.0.0
* Some packages refactored
* Restructured pom.xml (include nanohttp, make lanterna optional)

=== 0.14.0.0
* Frontend: Support for delete actions
* Web Frontend: Better detection and support for small devices

=== 0.12.0.0
* Server: use http session or websocket connection as base for session management

=== 0.11.0.1
* Web Frontend: reserve space on the right only if there is a menu