@@ -4,6 +4,7 @@ Every release contains many small fixes.
 
 === 1.11.0.0
 * Application: Declare Resources with Bundles, not with Strings
+* Refactor repository configuration
 
 === 1.10.0.0
 * Split Application/Model/Api
